--- a/rapporter/reference_base.tex
+++ b/rapporter/reference_base.tex
@@ -2,6 +2,6 @@
 
 Several references has been mentioned in \cref{method} and most of them are of real interest. The main article which is covering the problem formulation well is "Human Identification Using Automatic and Semi-Automatically Detected Facial Marks" \cite{automatic_detector_2015}. It covers some pre-processing and post-processing methods and also the facial mark detection which makes it a good reference. It is a new and reliable source since Richard W. Vorder Bruegge is known by the costumers. 
 
-The face segmentation form "A novel approach towards detecting faces and gender using skin segmentation and template matching" \cite{face_segmentation_skin} looks promising and it is new publication. For landmark detections there are several algorithms but the one from "Detector of Facial Landmarks Learned by the Structured Output SVM" \cite{landmarks_SVM} has implemented algorithm in C++ which is useful for this thesis work.
+The face segmentation form "A novel approach towards detecting faces and gender using skin segmentation and template matching" \cite{face_segmentation_skin} looks promising and it is a new publication. For landmark detections there are several algorithms but the one from "Detector of Facial Landmarks Learned by the Structured Output SVM" \cite{landmarks_SVM} has implemented algorithm in C++ which is useful for this thesis work.
 
 The use of other colour spaces has proven useful in earlier works done by the thesis worker. By using the colour spaced described in "Learning Color Names for Real-World Applications" \cite{11_colours} it can facilitate the detection algorithm. 
