--- a/rapporter/time_plan.tex
+++ b/rapporter/time_plan.tex
@@ -10,7 +10,7 @@ This section describes how the time will be distributed between different tasks 
 	\hline
 	\textbf{Task}              & \textbf{Time (d)} & \textbf{Description}                                        \\ \hline
 	Thesis plan                & 12                & Writing a plan for the thesis work                          \\ \hline
-	Data generation            & 5                 & Create training and test data for validation and classifier \\ \hline
+	Data generation            & 7.5                 & Create training and test data for validation and classifier \\ \hline
 	Face segmentation          & 3                 & Implement face detection and segmentation                   \\ \hline
 	Landmarks                  & 3                 & Implement facial landmark detection                         \\ \hline
 	Grid                       & 5                 & Implement face region                                       \\ \hline
@@ -29,7 +29,7 @@ This section describes how the time will be distributed between different tasks 
 	Presentation               & 1                 & Presentation of master thesis                               \\ \hline
 	Opposition                 & 1                 & Opposition of an other thesis work                          \\ \hline
 	Reflection                 & 0.5               & Writing reflection document                                 \\ \hline
-	\textbf{SUM}               & 97.5                & Summation of the time                                       \\ \hline
+	\textbf{SUM}               & 100                & Summation of the time                                       \\ \hline
 \end{tabular}
 \end{table}
 
@@ -41,28 +41,28 @@ Some relevant milestones are listed in \cref{table:milestones}. These are just g
 \label{table:milestones}
 \begin{tabular}{|p{0.15\textwidth}|p{0.3\textwidth}|p{0.45\textwidth}|}
 	\hline
-	\textbf{Week (date)} & \textbf{Description}                  & \textbf{Comment}                                                                                                                      \\ \hline
-	3 (22/1)             &                                       &  \\ \hline
-	4 (29/1)             & First draft of thesis plan            & Thesis plan has been sent to MD                                                                                                       \\ \hline
-	5 (5/2)              & Thesis plan approved                  & Thesis plan has been approved by LA                                                                                                   \\ \hline
-	6 (12/2)             &                                       &  \\ \hline
-	7 (19/2)             & Facial Grid                           & The face region generator works                                                                                                       \\ \hline
-	8 (26/2)             &                                       &  \\ \hline
-	9 (4/3)              &                                       &  \\ \hline
-	10 (11/3)            &                                       &  \\ \hline
-	11 (18/3)            & Half time report + Rough detector     & Present the progress and preliminary results to LA, MD, EL and NA \newline The detector find all facial marks with no post-processing \\ \hline
-	12 (25/3)            &                                       &  \\ \hline
-	13 (1/4)             &                                       &  \\ \hline
-	14 (8/4)             &                                       &  \\ \hline
-	15 (15/4)            & Algorithm functional                  & The algorithm function and may need fine                                                                                              \\ \hline
-	16 (22/4)            &                                       & tuning                                                                                                                                \\ \hline
-	17 (29/4)            & Results and validation                &  \\ \hline
-	18 (6/5)             & First complete draft of thesis report & Thesis report has been sent to MD                                                                                                     \\ \hline
-	19 (13/5)            &                                       &  \\ \hline
-	20 (20/5)            &                                       &  \\ \hline
-	21 (27/5)            & Final version of thesis report        & Thesis report has been approved by LA                                                                                                 \\ \hline
-	22 (3/6)             &                                       &  \\ \hline
-	23 (10/6)            & Thesis presentation                   &  \\ \hline
+	\textbf{Week (date)} & \textbf{Description}                    & \textbf{Comment}                                                                                                                      \\ \hline
+	3 (22/1)             &                                         &  \\ \hline
+	4 (29/1)             & First draft of thesis plan              & Thesis plan has been sent to MD                                                                                                       \\ \hline
+	5 (5/2)              &                                         &  \\ \hline
+	6 (12/2)             & Thesis plan sent to LA                  & The thesis plan has been sent to LA                                                                                                   \\ \hline
+	7 (19/2)             & Thesis plan approved and data generator & Generation of training data is possible and thesis plan has been approved by LA                                                       \\ \hline
+	8 (26/2)             & Facial Grid                             & The face region works generator                                                                                                       \\ \hline
+	9 (4/3)              &                                         &  \\ \hline
+	10 (11/3)            &                                         &  \\ \hline
+	11 (18/3)            &                                         &  \\ \hline
+	12 (25/3)            & Half time report + Rough detector       & Present the progress and preliminary results to LA, MD, EL and NA \newline The detector find all facial marks with no post-processing \\ \hline
+	13 (1/4)             &                                         &  \\ \hline
+	14 (8/4)             &                                         &  \\ \hline
+	15 (15/4)            & Algorithm functional                    & The algorithm function and may need fine                                                                                              \\ \hline
+	16 (22/4)            &                                         & tuning                                                                                                                                \\ \hline
+	17 (29/4)            & Results and validation                  &  \\ \hline
+	18 (6/5)             & First complete draft of thesis report   & Thesis report has been sent to MD                                                                                                     \\ \hline
+	19 (13/5)            &                                         &  \\ \hline
+	20 (20/5)            &                                         &  \\ \hline
+	21 (27/5)            & Final version of thesis report          & Thesis report has been approved by LA                                                                                                 \\ \hline
+	22 (3/6)             &                                         &  \\ \hline
+	23 (10/6)            & Thesis presentation                     &  \\ \hline
 \end{tabular}
 \end{table}
 
@@ -76,7 +76,7 @@ The most important date which are regarded as deadlines are listed in \cref{tabl
 	\begin{tabular}{|p{0.3\textwidth}|p{0.45\textwidth}|}
 		\hline
 		\textbf{Date} & \textbf{Description}                  \\ \hline
-		18/3          & Half time report                      \\ \hline
+		23/3          & Half time report                      \\ \hline
 		6/5          & Thesis report has been sent to MD     \\ \hline
 		27/5          & Thesis report has been approved by LA \\ \hline
 		10/6          & Thesis presentation                   \\ \hline
