Started on introduction

--- a/rapporter/Thesis/Thesis_armand.tex
+++ b/rapporter/Thesis/Thesis_armand.tex
@@ -17,35 +17,58 @@
 \pagenumbering{<command>}
 \pagenumbering{Roman}
 	
-\title{Master thesis plan}
+\title{Automatic detection and localization of relatively permanent pigmented or vascular skin marks}
 \author{Armand Moulis}
 \date{\today}
 \maketitle
-\newpage
-
 
 \newpage
+
+\listoffigures
+
+\listoftables
+
+\newpage
+
 \setcounter{tocdepth}{3}
 \tableofcontents
+
 \newpage
 
+DETTA KOMMER ATT TAS BORT NÄR VÄL RAPPORTEN ÄR KLAR. KAN DOCK VARA AV INTRESSE UNDER TIDENS GÅNG 
 \section*{Document history}
 \begin{center}
 	\begin{tabular}{|l|l| p{5cm} |l|l| }
 		\hline
 		Version & Date   & Changes & Sign & Reviewed \\ \hline
-		1.0     & \today &         &      &  \\ \hline
+		0.1     & \today &         &      &  \\ \hline
 	\end{tabular}
 \end{center}
+
+
+%% Start of the document
+
+\include{Abstract}
 
 \setcounter{page}{1}
 \pagenumbering{arabic}
 \newpage
 
-%% Start of the document
-\section{Introduction}
 
-jadj \cite{forensic_identification}
+\include{Introduction}
+
+\include{Related_work}
+
+\include{Method}
+
+\include{Result}
+
+\include{Discussion}
+
+\include{Conclusion}
+
+%% End of the body 
+
 
 	
 \newpage
