--- a/rapporter/Thesis/references.bib
+++ b/rapporter/Thesis/references.bib
@@ -146,12 +146,22 @@
 	publisher={Elsevier}
 }
 
-@article{edge_method,
+@article{edge_methods,
 	title={Comparison of Edge Detection Algorithms for Texture Analysis on Glass Production},
 	author={{\"O}zt{\"u}rk, {\c{S}}aban and Akdemir, Bayram},
 	journal={Procedia-Social and Behavioral Sciences},
 	volume={195},
 	pages={2675--2682},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{face_soft,
+	title={Facial soft biometric features for forensic face recognition},
+	author={Tome, Pedro and Vera-Rodriguez, Ruben and Fierrez, Julian and Ortega-Garcia, Javier},
+	journal={Forensic science international},
+	volume={257},
+	pages={271--284},
 	year={2015},
 	publisher={Elsevier}
 }
