--- a/rapporter/Thesis/Thesis_armand.tex
+++ b/rapporter/Thesis/Thesis_armand.tex
@@ -17,7 +17,7 @@
 \pagenumbering{<command>}
 \pagenumbering{Roman}
 	
-\title{Automatic detection and localization of relatively permanent pigmented or vascular skin marks}
+\title{Automatic Detection and Localization of Relatively Permanent Pigmented or Vascular Skin Marks}
 \author{Armand Moulis}
 \date{\today}
 \maketitle
