--- a/rapporter/Thesis/references.bib
+++ b/rapporter/Thesis/references.bib
@@ -165,3 +165,31 @@
 	year={2015},
 	publisher={Elsevier}
 }
+
+@inproceedings{Bertillon,
+	TITLE = {Forensic facial analysis. Identification anthropometrique: instructions signaletiques},
+	AUTHOR = {Bertillon A},
+	YEAR = {1885},
+	address = {France, Paris}
+}
+
+
+@article{twins,
+	title={Analysis of facial marks to distinguish between identical twins},
+	author={Srinivas, Nisha and Aggarwal, Gaurav and Flynn, Patrick J and Vorder Bruegge, Richard W},
+	journal={Information Forensics and Security, IEEE Transactions on},
+	volume={7},
+	number={5},
+	pages={1536--1550},
+	year={2012},
+	publisher={IEEE}
+}
+
+@inproceedings{jain_facial,
+	title={Facial marks: Soft biometric for face recognition},
+	author={Jain, Anil K and Park, Unsang},
+	booktitle={Image Processing (ICIP), 2009 16th IEEE International Conference on},
+	pages={37--40},
+	year={2009},
+	organization={IEEE}
+}
