--- a/rapporter/Thesis/Introduction.tex
+++ b/rapporter/Thesis/Introduction.tex
@@ -2,14 +2,18 @@
 \subsection{Motivation}
 The amount of technical tools available for forensic analysis in law enforcement increases rapidly and today there exist millions of devises capable of taking colour images. Video surveillance cameras, security cameras and cellphone cameras can all be used to catch perpetrators in the act. The videos and still images can be used as evidence for identification during trails which means that forensic technicians need tools to evaluate if the suspect is the same person as the one caught on camera.
 
-The most intuitive method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio express how strong the evidences against the suspect are and it is calculated by the 'Bayes factor'.  
+The most intuitive method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio express how strong the evidences against the suspect are and it is calculated by the Bayes factor.
+
+To calculate the Bayes factor it is required to have enough observations of facial features and these are acquired manually by experts since facial recognition processes have not been found to be reliable enough \cite{automatic_detector_2015}. To record all these observations manually is time consuming and there exist a interest in doing this automatically \cite{forensic_identification}. 
+
+This master thesis was motivated by the need of large amount of data from facial marks. The National Forensic Centre (NFC) in Sweden is supporting this work by providing guidance and practical help.  
 
 \subsection{Aim}
 
 The aim of this master thesis is to examine the possibilities of automatically detecting and locating facial marks and classifying them as permanent or non-permanent marks. The frequency, location and size of the permanent marks are stored such that it can be used to calculate the likelihood ratio. By automatically creating a large data base with face images and their features, the accuracy and speed in face recognition cases can be increased. 
 
 \subsection{Problem specification}
-
+This master thesis is going to answers the following questions: 
 \begin{displayquote}
 	Is it possible to implement a program which can automatically detect RPPVSM?
 
@@ -22,20 +26,4 @@ The aim of this master thesis is to examine the possibilities of automatically d
 
 \subsection{Boundary}
 
-In general, when working with image, the quality of the images are crucial for the results. Low resolution and badly illuminated images taken from different angles can cause analytical difficulties. Therefore, in this thesis we are only going to us images which:
-
-\begin{itemize}
-	\item Have a high resolution
-	\item Are well illuminated
-	\item Are taken en face
-	\item Are in RGB-colours 
-\end{itemize}
-
-
-
-
-Forensic technicians use still images to compare visible features between suspect a and a perpetrator in order to determine whether it is the same person. This is done manually and is time consuming which is why there is an interest in creating methods and standards which could do the comparison automatically \cite{forensic_identification}. To create automatic methods the facial features have to be detected, classified, and located. The most common facial marks are moles, pockmarks, freckles, scars, and acne. Some of these marks are not permanent, e.g. acne usually heals without leaving any marks, while scares and moles remain the whole life    \cite{automatic_detector_2015}. Skin marks which can be used for identification are called "Relatively Permanent Pigmented or Vascular Skin Marks" (RPPVSM) and they have to be relatively permanent, common and also be observable without any special equipment. \cite{statistic_RPPVSM}
-
-When the pattern of facial marks has been determined and compared with a suspect, the forensic technicians give a specialist report to he court. The report states how probable it is that the suspect is the perpetrator. In order to give this statement they need to know the probability that two persons can have the same facial mark pattern. To know this there is a need of statical information about the occurrence and position of facial marks within the population \cite{NFC_stat}.
-
-This thesis work will focus on developing an automatic system which can automatically detect and position RPPVSM in human faces, in order to get reliable statistics about facial marks in the population.   
+In general, when working with image, the quality of the images are crucial for the results. Low resolution and badly illuminated images taken from different angles can cause analytical difficulties. Therefore, this thesis will us images which are high resolute, well illuminated, taken en face and in RGB-colours. 
