--- a/rapporter/Better Thesis/Introduction.tex
+++ b/rapporter/Better Thesis/Introduction.tex
@@ -1,9 +1,8 @@
 \chapter{Introduction}\label{cha:intro}
-
 \section{Motivation}
 The amount of technical tools available for forensic analysis in law enforcement increases rapidly and today there exist millions of devises capable of taking colour images. Video surveillance cameras, security cameras and cellphone cameras can all be used to catch perpetrators in the act. The videos and still images can be used as evidence for identification during trails which means that forensic technicians need tools to evaluate if the suspect is the same person as the one caught on camera.
 
-The most intuitive method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio express how strong the evidences against the suspect are and it is calculated by the Bayes factor.
+One common method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio express how strong the evidences against the suspect are and it is calculated by the Bayes factor.
 
 To calculate the Bayes factor it is required to have enough observations of facial features and these are acquired manually by experts since facial recognition processes have not been found to be reliable enough \cite{automatic_detector_2015}. To record all these observations manually is time consuming and there exist a interest in doing this automatically \cite{forensic_identification}. 
 
@@ -17,9 +16,9 @@ The aim of this master thesis is to examine the possibilities of automatically d
 This master thesis is going to answers the following questions: 
 \begin{displayquote}
 	Is it possible to implement a program which can automatically detect RPPVSM?
-	
+
 	How can the RPPVSM be given a location and size within a face?
-	
+
 	With which accuracy can the program detect and localize RPPVSM?
 \end{displayquote}
 
