--- a/rapporter/Better Thesis/avrundning.tex
+++ b/rapporter/Better Thesis/avrundning.tex
@@ -1,3 +1,3 @@
-\chapter{Avslutande kommentarer}\label{cha:conclusions}
+\chapter{Method}\label{cha:method}
 %
-Sätt av ett kort kapitel sist i rapporten till att avrunda och föreslå rikningar för framtida utveckling av arbetet.
+
