--- a/rapporter/Better Thesis/myrefs.bib
+++ b/rapporter/Better Thesis/myrefs.bib
@@ -1,75 +1,193 @@
-@Article{Duck:2005,
-  author =   {Duck, Donald},
-  title =    {The History of Automatic Control},
-  journal =  {Duckburg Journal of Science},
-  year =     2005,
-  volume =   106,
-  number =   3,
-  pages =    {345--401},
+@inproceedings{forensic_identification,
+	author    = "Spaun N.A., Bruegge R.W.V.",
+	title     = "Forensic identification of people from images and video",
+	booktitle = "Biometrics: Theory, Applications and Systems",
+	%editor   = "",
+	%volume   = "",
+	%number   = "",
+	%series   = "",
+	%pages    = "",
+	%address  = "",
+	year      = "2008",
+	%month    = "",
+	%publisher= "",
+	%note     = "",
 }
 
-@Article{Doe:2008:random,
-  author =   {Doe, John and Gauß, Carl Friedrich},
-  title =    {Early work on random distributions},
-  journal =  {Dückenburg Journal of Random Stuff},
-  year =     2008,
-  volume =   3,
-  number =   14,
-  pages =    {159--265},
+@article{automatic_detector_2015,
+	author    = "Nisha Srinivas M.Sc., Patrick J. Flynn Ph.D., Richard W. Vorder Bruegge Ph.D.",
+	title     = "Human Identification Using Automatic and Semi-Automatically Detected Facial Marks",
+	journal   = "Journal of Forensic Sciences",
+	volume   = "61",
+	number   = "S1",
+	pages    = "117-130",
+	year      = "2015",
+	month    = "September",
+	%note     = "",
 }
 
-@Article{Doe:2009:stats,
-  author =   {Doe, John and the Dealer, Jonny},
-  title =    {Some tragic numbers from cars deals in Uppsala},
-  journal =  {Duckburg Journal of Commerce},
-  year =     2009,
-  volume =   3,
-  number =   2,
-  pages =    {1--3},
+@inproceedings{statistic_RPPVSM,
+	author    = "Nurhudatiana A., Matinpour K., Siu-Yeung Cho, Craft N.",
+	title     = "Fundamental statistics of relatively permanent pigmented or vascular skin marks for criminal and victim identification",
+	booktitle   = "Biometrics (IJCB)s",
+	%editor   = "",
+	%volume   = "",
+	%number   = "",
+	%series   = "",
+	pages    = "1-6",
+	%address  = "",
+	year      = "2011",
+	month    = "October",
+	%publisher= "",
+	%note     = "",
 }
 
-@Article{Doe:2009:thoughts,
-  author =   {Doe, John},
-  title =    {Some thoughts on cars and markets},
-  journal =  {Duckburg Journal of Commerce},
-  year =     2009,
-  volume =   3,
-  number =   1,
-  pages =    {13--18},
+@inproceedings{face_segmentation_skin,
+	author    = "Partha Das, Anirban Sarkar, Soumyadeep Halder, Debasish Kundu, Sudipta Ghosh,
+	Sauvik Das Gupta",
+	title     = "A novel approach towards detecting faces and gender using skin segmentation and template matching",
+	booktitle   = "Signal Processing and Integrated Networks (SPIN)",
+	%editor   = "",
+	%volume   = "",
+	%number   = "",
+	%series   = "",
+	%pages    = "",
+	%address  = "",
+	year      = "2015",
+	%month    = "",
+	%publisher= "",
+	%note     = "",
 }
 
-@Book{Rugh96LinearSystemsBook,
-  author = {Rugh, Wilson J.},
-  title = {Linear system theory},
-  edition = {Second},
-  publisher = {Prentice-Hall, Inc.},
-  year = {1996},
+@article{11_colours,
+	author    = "Joost van de Weijer, Cordelia Schmid, Jakob Verbeek, Diane Larlus",
+	title     = "Learning Color Names for Real-World Applications",
+	journal   = "IEEE Transactions on Image Processing",
+	volume   = "18",
+	number   = "7",
+	pages    = "1512-1523",
+	year      = "2009",
+	month    = "July",
+	%note     = "",
 }
 
-@Book{Khalil02NonlinearSystemsBook,
-  author = {Khalil, Hassan K.},
-  title = {Nonlinear systems},
-  publisher = {Prentice Hall, Inc.},
-  edition = {Third},
-  year = {2002},
+@inproceedings{landmarks_SVM,
+	author =      {U{\v{r}}i{\v{c}}{\'{a}}{\v{r}}, Michal and 
+	Franc, Vojt{\v{e}}ch and Hlav{\'{a}}{\v{c}}, V{\'{a}}clav },
+	title =       {Detector of Facial Landmarks Learned by the Structured Output {SVM}},
+	year =        {2012},
+	pages =       {547-556},
+	booktitle =   {VISAPP '12: Proceedings of the 7th International Conference on Computer Vision Theory and Applications},
+	editor =      {Csurka, Gabriela and Braz, Jos{\'{e}}},
+	publisher =   {SciTePress --- Science and Technology Publications},
+	address =     {Portugal},
+	volume =      {1},
+	isbn =        {978-989-8565-03-7},
+	book_pages =  {747},
+	month =       {February},
+	day =         {24-26},
+	venue =       {Rome, Italy},
+	annote =      {In this paper we describe a detector of facial
+	landmarks based on the Deformable Part Models. We treat the task
+	of landmark detection as an instance of the structured output
+	classification problem. We propose to learn the parameters of the
+	detector from data by the Structured Output Support Vector
+	Machines algorithm. In contrast to the previous works, the
+	objective function of the learning algorithm is directly related
+	to the performance of the resulting detector which is controlled
+	by a user-defined loss function. The resulting detector is
+	real-time on a standard PC, simple to implement and it can be
+	easily modified for detection of a different set of landmarks.  We
+	evaluate performance of the proposed landmark detector on a
+	challenging ''Labeled Faces in the Wild`` (LFW) database. The
+	empirical results demonstrate that the proposed detector is
+	consistently more accurate than two public domain implementations
+	based on the Active Appearance Models and the Deformable Part
+	Models. We provide an open-source implementation of the proposed
+	detector and the manual annotation of the facial landmarks for all
+	images in the LFW database.},
+	keywords =    {Facial Landmark Detection, Structured Output Classification, 
+	Support Vector Machines, Deformable Part Models},
+	prestige =    {important},
+	authorship =  {50-40-10},
+	status =      {published},
+	project =     {FP7-ICT-247525 HUMAVIPS, PERG04-GA-2008-239455 SEMISOL, 
+	Czech Ministry of Education project 1M0567},
+	www = {http://www.visapp.visigrapp.org},
 }
 
-@article{Mori07Tables,
-author = {Mori, Lapo Filippo},
-title = {Tables in {\LaTeXe}: Packages and methods},
-journal = {The {Prac\TeX} Journal},
-year = {2007},
-volume = {2007},
-number = {1},
-url = {http://tug.org/pracjourn/2007-1/mori},
+@inproceedings{landmarks_wild,
+	title={Face detection, pose estimation, and landmark localization in the wild},
+	author={Zhu, Xiangxin and Ramanan, Deva},
+	booktitle={Computer Vision and Pattern Recognition (CVPR), 2012 IEEE Conference on},
+	pages={2879--2886},
+	year={2012},
+	organization={IEEE}
 }
 
-@article{RyckoJackowski93TeXIndentPar,
-  author = {Ryćko, Marek and Jackowski, Bugosław},
-  title = {{\TeX} from {\textbackslash}indent to {\textbackslash}par},
-  journal = {TUGboat},
-  volume = {14},
-  year = {1993},
-  number = {3},
-  url = {http://www.tug.org/TUGboat/Articles/tb14-3/tb40rycko.pdf},
+@article{NFC_stat,
+	title={Scale of conclusions for the value of evidence},
+	author={Nordgaard, Anders and Ansell, Ricky and Drotz, Weine and Jaeger, Lars},
+	journal={Law, probability and risk},
+	pages={1-24},
+	year={2011},
+	publisher={Oxford Univ Press}
+}
+
+@article{segmentation_method,
+	title={Survey on Image Segmentation Techniques},
+	author={Zaitoun, Nida M and Aqel, Musbah J},
+	journal={Procedia Computer Science},
+	volume={65},
+	pages={797--806},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{edge_methods,
+	title={Comparison of Edge Detection Algorithms for Texture Analysis on Glass Production},
+	author={{\"O}zt{\"u}rk, {\c{S}}aban and Akdemir, Bayram},
+	journal={Procedia-Social and Behavioral Sciences},
+	volume={195},
+	pages={2675--2682},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@article{face_soft,
+	title={Facial soft biometric features for forensic face recognition},
+	author={Tome, Pedro and Vera-Rodriguez, Ruben and Fierrez, Julian and Ortega-Garcia, Javier},
+	journal={Forensic science international},
+	volume={257},
+	pages={271--284},
+	year={2015},
+	publisher={Elsevier}
+}
+
+@inproceedings{Bertillon,
+	TITLE = {Forensic facial analysis. Identification anthropometrique: instructions signaletiques},
+	AUTHOR = {Bertillon A},
+	YEAR = {1885},
+	address = {France, Paris}
+}
+
+
+@article{twins,
+	title={Analysis of facial marks to distinguish between identical twins},
+	author={Srinivas, Nisha and Aggarwal, Gaurav and Flynn, Patrick J and Vorder Bruegge, Richard W},
+	journal={Information Forensics and Security, IEEE Transactions on},
+	volume={7},
+	number={5},
+	pages={1536--1550},
+	year={2012},
+	publisher={IEEE}
+}
+
+@inproceedings{jain_facial,
+	title={Facial marks: Soft biometric for face recognition},
+	author={Jain, Anil K and Park, Unsang},
+	booktitle={Image Processing (ICIP), 2009 16th IEEE International Conference on},
+	pages={37--40},
+	year={2009},
+	organization={IEEE}
 }
