--- a/rapporter/Better Thesis/tack.tex
+++ b/rapporter/Better Thesis/tack.tex
@@ -1,11 +1,11 @@
 \begin{acknowledgments}
-  Vi tycker alla har varit så himla goa hela den här långa och tuffa tiden i våra liv.
+
 
   \addvspace{1em}
   \begin{flushright}
     \textit{%
-      Linköping, Januari 2020\\
-      N N och M M%
+      Linköping, \today \\
+      Armand Moulis%
     }
   \end{flushright}
 \end{acknowledgments}
