--- a/rapporter/Better Thesis/myrefs.bib
+++ b/rapporter/Better Thesis/myrefs.bib
@@ -191,3 +191,84 @@
 	year={2009},
 	organization={IEEE}
 }
+
+
+@inproceedings{face_detection,
+	title={Rapid object detection using a boosted cascade of simple features},
+	author={Viola, Paul and Jones, Michael},
+	booktitle={Computer Vision and Pattern Recognition, 2001. CVPR 2001. Proceedings of the 2001 IEEE Computer Society Conference on},
+	volume={1},
+	pages={I--511},
+	year={2001},
+	organization={IEEE}
+}
+
+@inproceedings{dlib_landmark,
+	title={One millisecond face alignment with an ensemble of regression trees},
+	author={Kazemi, Vahid and Sullivan, Josephine},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={1867--1874},
+	year={2014}
+}
+
+@inproceedings{badger,
+	title={Color badger: a novel Retinex-based local tone mapping operator},
+	author={Bani{\'c}, Nikola and Lon{\v{c}}ari{\'c}, Sven},
+	booktitle={International Conference on Image and Signal Processing},
+	pages={400--408},
+	year={2014},
+	organization={Springer}
+}
+
+@article{RSR,
+	title={Random spray retinex: A new retinex implementation to investigate the local properties of the model},
+	author={Provenzi, Edoardo and Fierro, Massimo and Rizzi, Alessandro and De Carli, Luca and Gadia, Davide and Marini, Daniele},
+	journal={IEEE Transactions on Image Processing},
+	volume={16},
+	number={1},
+	pages={162--171},
+	year={2007},
+	publisher={IEEE}
+}
+
+@inproceedings{grabcut,
+	title={Grabcut: Interactive foreground extraction using iterated graph cuts},
+	author={Rother, Carsten and Kolmogorov, Vladimir and Blake, Andrew},
+	booktitle={ACM transactions on graphics (TOG)},
+	volume={23},
+	number={3},
+	pages={309--314},
+	year={2004},
+	organization={ACM}
+}
+
+@article{FRS,
+	title={Fast radial symmetry for detecting points of interest},
+	author={Loy, Gareth and Zelinsky, Alexander},
+	journal={IEEE Transactions on pattern analysis and machine intelligence},
+	volume={25},
+	number={8},
+	pages={959--973},
+	year={2003},
+	publisher={IEEE}
+}
+
+@inproceedings{watershed,
+	title={Color image segmentation},
+	author={Meyer, Fernand},
+	booktitle={Image Processing and its Applications, 1992., International Conference on},
+	pages={303--306},
+	year={1992},
+	organization={IET}
+}
+
+@article{dullrazor,
+	title={Dullrazor{\textregistered}: A software approach to hair removal from images},
+	author={Lee, Tim and Ng, Vincent and Gallagher, Richard and Coldman, Andrew and McLean, David},
+	journal={Computers in biology and medicine},
+	volume={27},
+	number={6},
+	pages={533--543},
+	year={1997},
+	publisher={Elsevier}
+}
