--- a/rapporter/Better Thesis/Introduction.tex
+++ b/rapporter/Better Thesis/Introduction.tex
@@ -2,9 +2,9 @@
 \section{Motivation}
 The amount of technical tools available for forensic analysis in law enforcement increases rapidly and today there exist millions of devises capable of taking colour images. Video surveillance cameras, security cameras and cellphone cameras can all be used to catch perpetrators in the act. The videos and still images can be used as evidence for identification during trails which means that forensic technicians need tools to evaluate if the suspect is the same person as the one caught on camera.
 
-One common method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio express how strong the evidences against the suspect are and it is calculated by the Bayes factor.
+One common method of evaluating whether the perpetrator and the suspect are the same person is to compare facial features such as eyes, nose, mouth, scars, and other facial marks. This is nowadays done manually \cite{face_soft} by the forensic examiners and in order to give a objective and comparable conclusion value a likelihood ratio \cite{NFC_stat} is calculated. The likelihood ratio expresses how strong the evidences against the suspect.
 
-To calculate the Bayes factor it is required to have enough observations of facial features and these are acquired manually by experts since facial recognition processes have not been found to be reliable enough \cite{automatic_detector_2015}. To record all these observations manually is time consuming and there exist a interest in doing this automatically \cite{forensic_identification}. 
+To calculate the likelihood ratio it is required to have enough observations of facial features and these are acquired manually by experts since facial recognition processes have not been found to be reliable enough \cite{automatic_detector_2015}. To record all these observations manually is time consuming and there exist a interest in doing this automatically \cite{forensic_identification}. 
 
 This master thesis was motivated by the need of large amount of data from facial marks. The National Forensic Centre (NFC) in Sweden is supporting this work by providing guidance and practical help.  
 
