small changes to plan

--- a/rapporter/Planering/time_plan.tex
+++ b/rapporter/Planering/time_plan.tex
@@ -79,9 +79,10 @@ Some relevant milestones are listed in \cref{table:milestones}. These are just g
 	37 (16/9)            &                                       &  \\ \hline
 	38 (23/9)            & Algorithm functional                  & The algorithm function and may need fine tuning                                                                                       \\ \hline
 	39 (30/9)            & Results and validation                &  \\ \hline
-	40 (7/10)            & First complete draft of thesis report & Thesis report has been sent to MD                                                                                                     \\ \hline
+	40 (7/10)            & First complete draft of thesis report & Send thesis report to MD\\ \hline
 	41 (14/10)           &                                       &  \\ \hline
-	42 (21/10)           & Final version of thesis report        & Thesis report has been approved by LA                                                                                                 \\ \hline
+	42 (21/10)           & Final version of thesis report        & Report approval by LA
+	  \\ \hline
 	43 (28/10)           &                                       &  \\ \hline
 	44 (4/11)            & Thesis presentation                   &  \\ \hline
 \end{tabular}
@@ -98,8 +99,8 @@ The most important date which are regarded as deadlines are listed in \cref{tabl
 		\hline
 		\textbf{Date} & \textbf{Description}                  \\ \hline
 		18/3          & Half time report                      \\ \hline
-		7/10          & Thesis report has been sent to MD     \\ \hline
-		21/10         & Thesis report has been approved by LA \\ \hline
+		7/10          & Send thesis report to MD     \\ \hline
+		21/10         & Report approval by LA \\ \hline
 		4/11          & Thesis presentation                   \\ \hline
 	\end{tabular}
 \end{table}
